--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -175,7 +175,7 @@
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:中央ポケット&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つの場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
